--- a/package.json
+++ b/package.json
@@ -1,45 +1,46 @@
 {
-  "name": "links-manager-prisma",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@prisma/client": "^6.1.0",
-    "@radix-ui/react-avatar": "^1.1.2",
-    "@radix-ui/react-dialog": "^1.1.4",
-    "@radix-ui/react-dropdown-menu": "^2.1.4",
-    "@radix-ui/react-select": "^2.1.4",
-    "@radix-ui/react-slot": "^1.1.1",
-    "@reduxjs/toolkit": "^2.5.0",
-    "axios": "^1.7.9",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "dotenv": "^16.4.7",
-    "lucide-react": "^0.469.0",
-    "mysql2": "^3.12.0",
-    "next": "15.0.3",
-    "next-themes": "^0.4.4",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-redux": "^9.2.0",
-    "sonner": "^1.7.1",
-    "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.3",
-    "postcss": "^8",
-    "prisma": "^6.1.0",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+	"name": "links-manager-prisma",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev --turbopack",
+		"build": "npx prisma generate && next build",
+		"start": "next start",
+		"lint": "next lint",
+		"postinstall": "npx prisma generate"
+	},
+	"dependencies": {
+		"@prisma/client": "^6.1.0",
+		"@radix-ui/react-avatar": "^1.1.2",
+		"@radix-ui/react-dialog": "^1.1.4",
+		"@radix-ui/react-dropdown-menu": "^2.1.4",
+		"@radix-ui/react-select": "^2.1.4",
+		"@radix-ui/react-slot": "^1.1.1",
+		"@reduxjs/toolkit": "^2.5.0",
+		"axios": "^1.7.9",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"dotenv": "^16.4.7",
+		"lucide-react": "^0.469.0",
+		"mysql2": "^3.12.0",
+		"next": "15.0.3",
+		"next-themes": "^0.4.4",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"react-redux": "^9.2.0",
+		"sonner": "^1.7.1",
+		"tailwind-merge": "^2.6.0",
+		"tailwindcss-animate": "^1.0.7"
+	},
+	"devDependencies": {
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"eslint": "^8",
+		"eslint-config-next": "15.0.3",
+		"postcss": "^8",
+		"prisma": "^6.1.0",
+		"tailwindcss": "^3.4.1",
+		"typescript": "^5"
+	}
 }
