--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
 		"dotenv": "^16.4.7",
 		"lucide-react": "^0.469.0",
 		"mysql2": "^3.12.0",
-		"next": "15.0.3",
+		"next": "^15.1.4",
+		"next-pwa": "^5.6.0",
 		"next-themes": "^0.4.4",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
