--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"postinstall": "npx prisma generate"
 	},
 	"dependencies": {
+		"@gsap/react": "^2.1.1",
 		"@prisma/client": "^6.1.0",
 		"@radix-ui/react-avatar": "^1.1.2",
 		"@radix-ui/react-dialog": "^1.1.4",
@@ -21,6 +22,7 @@
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"dotenv": "^16.4.7",
+		"gsap": "^3.12.5",
 		"lucide-react": "^0.469.0",
 		"mysql2": "^3.12.0",
 		"next": "^15.1.4",
